<resources>    <string name="app_name">Latif</string>    <string name="user_name">User name</string>    <string name="password">Password</string>    <string name="login">Login</string>    <string name="signUp">Sign up</string>    <string name="interests">Your interests</string>    <!-- TODO: Remove or change this placeholder text -->    <string name="hello_blank_fragment">Hello blank fragment</string>    <string name="name">Name</string>    <string name="email">Email</string>    <string name="address">Address</string>    <string name="phone">Phone</string>    <string name="country">Country</string>    <string name="city">City</string>    <string name="governorate">Governorate</string>    <string name="policy">Policy</string>    <string name="back">Back</string>    <string name="policy_title"><![CDATA[Policy & Standards]]></string>    <string name="policy_checkbox_txt">I understand and agree</string>    <string name="choose_interest">Choose Your Interests</string>    <string name="done">Done</string>    <string name="chat">Chat</string>    <string name="service">Service</string>    <string name="clinic">Clinic</string>    <string name="blogs">Blogs</string>    <string name="pets">Pets</string>    <string name="items">Items</string>    <string name="profile">Profile</string>    <string name="sell">Advertise </string>    <string name="price">Price</string>    <string name="date">Date</string>    <string name="location">Location</string>    <string name="birthday">Birthday</string>    <string name="gender">Gender</string>    <string name="myAds">My ads</string>    <string name="language">Language</string>    <string name="call">Call</string>    <string name="sms">SMS</string>    <string name="reportAd">Report Ad</string>    <string name="share">Share</string>    <string name="subscribe">Subscribe</string>    <string name="reason">Reason</string>    <string name="veterinary">Veterinary clinic</string>    <string name="pharmacy"><![CDATA[Pharmacy &medicine]]></string>    <string name="housing">Housing</string>    <string name="hostelry">Hostelry</string>    <string name="delivery">Delivery</string>    <string name="shower"><![CDATA[Shower & Haircut]]></string>    <string name="filter">Filter</string>    <string name="whatULookingFor">What are you looking for?</string>    <string name="priceRange">Price Range</string>    <string name="applyFilter">Apply Filter</string>    <string name="send">Send</string>    <string name="typeMsg">Type your message</string>    <string name="addphoto">Add image</string>    <string name="placeyourAd">Locate this ad</string>    <string name="camera">Camera</string>    <string name="gallery">Gallery</string>    <string name="cancel_">Cancel</string>    <string name="title_activity_maps">Map</string>    <string name="ads_types">Ads type</string>    <string name="submit">Submit</string>    <string name="loading">Loading ...</string>    <string name="select">Select</string>    <string name="addFormValue">Plz check form values</string>    <string name="addFormname">The Ads Name is Mandatory</string>    <string name="addFormLoc">The Ads Location is Mandatory</string>    <string name="plz_add_location">Please add location</string>    <string name="noAds">No Ads</string>    <string name="Search">Search</string>    <string name="createBlog">Create blog</string>    <string name="title">Title</string>    <string name="description">Description</string>    <string name="create">Create</string>    <string name="categories">Categories</string>    <string name="required">Required</string>    <string name="blogIsAdded">your Blog is added successully</string>    <string name="joinedDate">Joined date:</string>    <string name="title_activity_blog_details">BlogDetailsActivity</string>    <!-- Strings used for fragments for navigation -->    <string name="first_fragment_label">First Fragment</string>    <string name="second_fragment_label">Second Fragment</string>    <string name="next">Next</string>    <string name="previous">Previous</string>    <string name="hello_first_fragment">Hello first fragment</string>    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string></resources>