<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.login.LoginActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bottom_curve_bg"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:src="@drawable/logo2" />
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <EditText
        android:id="@+id/usernameEx"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edittext_bg"
        android:gravity="center_vertical"
        android:hint="@string/user_name"
        android:minHeight="40dp"
        android:textColor="@color/black"
        android:fontFamily="@font/tajawal_regular"
        android:textColorHint="@color/dorado"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <EditText
        android:id="@+id/passwordEx"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bg"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="40dp"
        android:fontFamily="@font/tajawal_regular"
        android:textColor="@color/black"
        android:textColorHint="@color/dorado"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/usernameEx"
        app:layout_constraintStart_toStartOf="@id/usernameEx"
        app:layout_constraintTop_toBottomOf="@id/usernameEx" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/sunset_orange"
        android:minWidth="150dp"
        android:minHeight="50dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/tajawal_bold"
        app:layout_constraintEnd_toEndOf="@id/usernameEx"
        app:layout_constraintStart_toStartOf="@id/usernameEx"
        app:layout_constraintTop_toBottomOf="@id/passwordEx" />

    <TextView
        android:id="@+id/signUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:minWidth="150dp"
        android:padding="5dp"
        android:text="@string/signUp"
        android:textAllCaps="false"
        android:textColor="@color/sunset_orange"
        android:textSize="15sp"
        android:fontFamily="@font/tajawal_regular"
        app:layout_constraintEnd_toEndOf="@id/usernameEx"
        app:layout_constraintStart_toStartOf="@id/usernameEx"
        app:layout_constraintTop_toBottomOf="@id/loginBtn" />

    <TextView
        android:id="@+id/interestsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:drawableEnd="@drawable/right_arrow"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/interests"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:fontFamily="@font/tajawal_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>