<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:elevation="5dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/details_bg"
            android:elevation="5dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:padding="8dp"
                android:gravity="center"
                android:id="@+id/callBtn"
                android:text="@string/call"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <View
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:padding="8dp"
                android:gravity="center"
                android:id="@+id/smsBtn"
                android:text="@string/sms"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <View
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:padding="8dp"
                android:gravity="center"
                android:id="@+id/chatBtn"
                android:text="@string/chat"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>