<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="25dp"
    android:paddingEnd="25dp"
    android:paddingBottom="15dp"
    tools:context=".ui.auth.signup.fragments.policy.PolicyFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/pippin"
        app:cardCornerRadius="8dp"
        android:id="@+id/card"
        android:layout_marginBottom="30dp"
        android:clipToPadding="true"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="18dp"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:layout_gravity="center_horizontal"
            android:text="@string/policy_title"
            android:textSize="24sp"
            android:textColor="@color/red"
            />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_regular"
                android:scrollbars="vertical"
                android:text="No Policy Added"
                android:textColor="@color/dorado"
                android:textSize="14sp" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/policy_checkbox_txt"
                android:textColor="@color/red"
                android:buttonTint="@color/red"
                android:fontFamily="@font/poppins_regular"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/interestsBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card"
        app:layout_constraintBottom_toBottomOf="@id/card"
        android:textColor="@color/white"
        android:text="@string/interests"
        android:fontFamily="@font/poppins_bold"
        android:drawableEnd="@drawable/right_arrow_whit"
        android:drawableTint="@color/white"
        android:drawablePadding="8dp"
        android:textSize="17sp"
        android:textAllCaps="false"
        />

</androidx.constraintlayout.widget.ConstraintLayout>