<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.blogs.createBlog.CreateBlogActivity">
    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/bottom_curve_bg"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_back_white"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/createBlog"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </RelativeLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@id/toolbar"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            >

            <include layout="@layout/custom_spinner_layout"
                android:id="@+id/spinner"
                 />

            <EditText
                android:id="@+id/titleEx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical"
                android:hint="@string/title"
                android:minHeight="40dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:textColorHint="@color/dorado"
                android:textSize="14sp"
                  />
            <EditText
                android:id="@+id/descriptionEx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical"
                android:hint="@string/description"
                android:minHeight="40dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:textColorHint="@color/dorado"
                android:textSize="14sp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imagesListContainer"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray"
                android:id="@+id/line"
                android:layout_margin="10dp"
                android:layout_below="@id/container"/>

            <Button
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                 android:id="@+id/submitBtn"
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                android:textAllCaps="false"
                android:text="@string/submit"
                android:visibility="visible"
                />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <include layout="@layout/loader_"
        android:id="@+id/loader_"
        />
</RelativeLayout>