<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sell.SellActivity">
    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/bottom_curve_bg"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_back_white"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/sell"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </RelativeLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@id/toolbar"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"
            >

            <include layout="@layout/custom_spinner_layout"
                android:id="@+id/spinner"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/container"
                android:layout_below="@id/spinner"
                 >

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray"
                android:id="@+id/line"
                android:layout_margin="10dp"
                android:layout_below="@id/container"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/mapContainer"
                android:layout_marginTop="20dp"
                android:layout_below="@id/line"
                android:gravity="center"
                android:visibility="gone"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_margin="5dp"
                    android:id="@+id/placeNme"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                android:id="@+id/mapBtn"
                android:textSize="15sp"
                android:textAllCaps="false"
                android:text="@string/placeyourAd"

                />
            </LinearLayout>
            <Button
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/mapContainer"
                android:id="@+id/submitBtn"
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                android:textAllCaps="false"
                android:text="@string/submit"
                android:visibility="visible"
                />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
    <include layout="@layout/loader_"
        android:id="@+id/loader_"
        />
</RelativeLayout>